--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4.5-fpm
+FROM php:8.1-fpm
 
 # Copy composer.lock and composer.json
 COPY composer.lock composer.json /var/www/
@@ -39,9 +39,12 @@ COPY . /var/www
 
 # Copy existing application directory permissions
 COPY --chown=www:www . /var/www
+RUN chmod 777 /var/www
 
 # Change current user to www
 USER www
+
+RUN composer install
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
